conversation mode works. but its slow

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 openai-whisper==20231106
 pyaudio
 SpeechRecognition
---extra-index-url https://download.pytorch.org/whl/cu116
-torch
 gpt4all==2.0.2
+soundfile
