--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-pyaudio
-SpeechRecognition
-soundfile
-py3-tts==3.5 
+pyaudio==0.2.14
+SpeechRecognition==3.10.0
 openai==1.2.0
 playsound2==1.3.0
+dlib==19.24.2
+face_recognition==1.3.0
+numpy==1.26.2
+cv2
